# dendra

./: Cargo.toml  README.md
docs/: design.md
examples/: basic.rs
python/: .gitignore  Cargo.toml  README.md  engram.pyi  example.py  pyproject.toml
python/src/: lib.rs
src/: db.rs  distance.rs  err.rs  io.rs  lib.rs  math.rs  memory.rs  query.rs  segment.rs  storage.rs
src/core/: compaction_policy.rs  config.rs  engine.rs  memory.rs  mod.rs  segment.rs  task_system.rs
src/index/: lsh.rs  mod.rs  posterior.rs  vector.rs
src/index/ivf/: mod.rs
src/index/rpf/: mod.rs  node.rs  tree.rs
src/quantization/: adapter.rs  bitpack.rs  math.rs  mod.rs  qjl.rs  turbo_quant.rs
src/rpf/: mod.rs  node.rs  tree.rs
tests/: turbo_quant.rs
