[package]
name = "dendra"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bytemuck = "1.25.0"
env_logger = "0.11.10"
faer = "0.24.0"
log = "0.4.32"
memmap2 = "0.9.10"
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.150"
thiserror = "2.0.18"
wide = { version = "1.5.0", features = ["serde"] }
