[package]
name = "engram"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
bincode = { version = "2.0.1", features = ["serde"] }
bytemuck = "1.25.0"
faer = "0.24.0"
log = "0.4.32"
memmap2 = "0.9.10"
rand = "0.10.1"
rand_distr = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.150"
thiserror = "2.0.18"
statrs = "0.17.1"
wide = { version = "1.5.0", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11.10"
