[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "engram"
version = "0.1.0"
description = "engram: Bayesian LSH vector database with adaptive probabilistic routing"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = [
    "vector-search",
    "database",
    "similarity-search",
    "machine-learning",
]
dependencies = ["numpy>=1.20"]


[tool.maturin]
module-name = "engram"
features = ["pyo3/extension-module"]
